force-app/main/default/objects/Deal__c/fields/Primary_Contact_Exists_Check__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Exists_Check__c</fullName>
    <formula>IF(Opportunity__r.Has_Primary_Contact__c == true, &apos;✅ PRIMARY CONTACT DETECTED&apos;, &apos;❌ PRIMARY CONTACT DOES NOT EXIST&apos;)</formula>
    <label>Primary Contact Exists Check</label>
    <type>Text</type>
</CustomField>