force-app/main/default/objects/Deal__c/fields/Quote_Product_Check__c.field-meta.xml
<CustomField>
    <fullName>Quote_Product_Check__c</fullName>
    <formula>IF( Opportunity__r.SyncedQuote.LineItemCount=0, &apos;❌ SELECTED QUOTE HAS NO PRODUCTS&apos;, &apos;✅ SELECTED QUOTE HAS PRODUCTS&apos;)</formula>
    <label>Quote Product Check</label>
    <type>Text</type>
</CustomField>