force-app/main/default/objects/Deal__c/fields/Quote_Readiness_Check__c.field-meta.xml
<CustomField>
    <fullName>Quote_Readiness_Check__c</fullName>
    <description>Checks if opportunity is commercially ready</description>
    <formula>IF(ISBLANK(Opportunity__r.SyncedQuoteId),&apos;❌ NO QUOTE EXISTS&apos;,&apos;✅ QUOTE DETECTED&apos;)</formula>
    <label>Quote Readiness Check</label>
    <type>Text</type>
</CustomField>