force-app/main/default/objects/Deal__c/fields/Quote_Selection_Check__c.field-meta.xml
<CustomField>
    <fullName>Quote_Selection_Check__c</fullName>
    <formula>IF(   ISPICKVAL(Opportunity__r.SyncedQuote.Status, &apos;Rejected&apos;), &apos;❌ SELECTED QUOTE IS NOT ACCEPTED&apos;,IF ( ISPICKVAL(Opportunity__r.SyncedQuote.Status, &apos;Accepted&apos;), &apos;✅ SELECTED QUOTE IS ACCEPTED&apos;, &apos;⚠️ SELECTED QUOTE IS STILL &quot;IN REVIEW&quot;&apos;))</formula>
    <label>Quote Selection Check</label>
    <type>Text</type>
</CustomField>